commit translated contents

--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -12,29 +12,21 @@ items:
     displayName: FAQ
     href: faq.md
   expanded: true
-- name: Självstudier
+- name: Snabbstarter
   items:
   - name: Skapa ditt första experiment
     displayName: quickstart
     href: create-experiment.md
-  - name: Exempelgenomgång
+- name: Självstudier
+  items:
+  - name: Skapa en förebyggande lösning
     items:
-    - name: Skapa en förebyggande lösning
-      href: walkthrough-develop-predictive-solution.md
-    - name: 1 – Skapa en arbetsyta
-      href: walkthrough-1-create-ml-workspace.md
-    - name: 2 – Överför data
-      href: walkthrough-2-upload-data.md
-    - name: 3 – Skapa experiment
-      href: walkthrough-3-create-new-experiment.md
-    - name: 4 – Träna och utvärdera
-      href: walkthrough-4-train-and-evaluate-models.md
-    - name: 5 – Distribuera webbtjänst
-      displayName: publish
-      href: walkthrough-5-publish-web-service.md
-    - name: 6 – Få åtkomst till webbtjänsten
-      displayName: consume
-      href: walkthrough-6-access-web-service.md
+    - name: 1 – Skapa experiment
+      href: tutorial-part1-credit-risk.md
+    - name: 2 – Träna och utvärdera
+      href: tutorial-part2-credit-risk-train.md
+    - name: 3 – Distribuera webbtjänst
+      href: tutorial-part3-credit-risk-deploy.md
 - name: Exempel
   items:
   - name: Tillgängliga datauppsättningar
@@ -155,8 +147,6 @@ items:
       href: retrain-machine-learning-model.md
     - name: Omtrimma programmässigt
       href: retrain-models-programmatically.md
-    - name: Omtrimma en klassisk webbtjänst
-      href: retrain-a-classic-web-service.md
     - name: Omtrimma med PowerShell
       href: retrain-new-web-service-using-powershell.md
     - name: Omtrimma en befintlig webbtjänst
@@ -213,9 +203,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/machine-learning/
   - name: Anpassade neurala nätverk (Net#)
     href: azure-ml-netsharp-reference-guide.md
-ms.openlocfilehash: 59fb65ee260e65bbbe4d3d8b18097c14a0a652f7
-ms.sourcegitcommit: e51e940e1a0d4f6c3439ebe6674a7d0e92cdc152
+ms.openlocfilehash: ac8621773366d7e6dff26f053172e2831fa2d2a1
+ms.sourcegitcommit: 301128ea7d883d432720c64238b0d28ebe9aed59
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/08/2019
-ms.locfileid: "55892660"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "56211486"
