--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -5,7 +5,7 @@ items:
   items:
   - name: Vad är Azure Monitor?
     href: overview.md
-  - name: Varumärkesändringar
+  - name: Ändringar i terminologi
     href: azure-monitor-rebrand.md
 - name: Snabbstarter
   items:
@@ -64,6 +64,12 @@ items:
     href: azure-management.md
   - name: Kontinuerlig övervakning
     href: continuous-monitoring.md
+  - name: Analysera loggdata
+    items:
+    - name: Loggfrågor
+      href: log-query/log-query-overview.md
+    - name: Loggfrågeportaler
+      href: log-query/portals.md
   - name: Övervaka data
     items:
     - name: Mått och loggar
@@ -106,18 +112,6 @@ items:
       href: insights/vminsights-overview.md
     - name: Övervakningslösningar
       href: insights/solutions-inventory.md
-  - name: Analysera data
-    items:
-    - name: Log Analytics
-      href: log-query/log-query-overview.md
-    - name: Loggfrågeportaler
-      href: log-query/portals.md
-    - name: Övergång till OMS-portalen
-      items:
-      - name: Översikt
-        href: platform/oms-portal-transition.md
-      - name: Vanliga frågor
-        href: platform/oms-portal-faq.md
   - name: Svara på incidenter
     items:
     - name: Aviseringar
@@ -138,6 +132,12 @@ items:
     href: visualizations.md
   - name: Partnerintegrering
     href: platform/partners.md
+  - name: Övergång till OMS-portalen
+    items:
+    - name: Översikt
+      href: platform/oms-portal-transition.md
+    - name: Vanliga frågor
+      href: platform/oms-portal-faq.md
   - name: VANLIGA FRÅGOR OCH SVAR
     items:
     - name: Log Analytics
@@ -1023,9 +1023,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: 96f79397b16212fe0897e0d03f57ffb7248118c8
-ms.sourcegitcommit: 415742227ba5c3b089f7909aa16e0d8d5418f7fd
+ms.openlocfilehash: b1d837248f84eb3050788924f4bb0e0077845abe
+ms.sourcegitcommit: e69fc381852ce8615ee318b5f77ae7c6123a744c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/06/2019
-ms.locfileid: "55767132"
+ms.lasthandoff: 02/11/2019
+ms.locfileid: "55993579"
