--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -31,6 +31,8 @@ items:
     href: azure-maps-event-grid-integration.md
   - name: Välja rätt prisnivå
     href: choose-pricing-tier.md
+  - name: Autentisering med Azure Maps
+    href: azure-maps-authentication.md
   - name: Täckning
     items:
     - name: Täckning för geokodning
@@ -49,8 +51,10 @@ items:
   items:
   - name: Hantera Maps-konton
     items:
-    - name: Hantera konton och nycklar
+    - name: Hantera konton
       href: how-to-manage-account-keys.md
+    - name: Hantera autentisering
+      href: how-to-manage-authentication.md
     - name: Hantera prisnivå
       href: how-to-manage-pricing-tier.md
     - name: Visa användningsstatistik
@@ -59,6 +63,8 @@ items:
     items:
     - name: Söka efter en adress
       href: how-to-search-for-address.md
+    - name: Rendera anpassade data på statisk karta
+      href: how-to-render-custom-data.md
   - name: Skapa JavaScript-kartor
     items:
     - name: Använda kartkontrollen
@@ -99,6 +105,10 @@ items:
       href: map-events.md
     - name: Tillgängliga kartprogram
       href: map-accessibility.md
+  - name: Skapa Android-kartor
+    items:
+    - name: Använda Android-kartkontroll
+      href: how-to-use-android-map-control-library.md
 - name: Referens
   items:
   - name: API- och parametertillägg
@@ -183,9 +193,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://iotschool.microsoft.com/learning-paths/4ZktHn3KEUIiUw64C0Aieo
-ms.openlocfilehash: 0fb1d864dd18a781d0eeba4c8dea610e3ccb07f2
-ms.sourcegitcommit: e69fc381852ce8615ee318b5f77ae7c6123a744c
+ms.openlocfilehash: 6a657596cb266db20404d7f2ec1074834d181772
+ms.sourcegitcommit: fec0e51a3af74b428d5cc23b6d0835ed0ac1e4d8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/11/2019
-ms.locfileid: "55999461"
+ms.lasthandoff: 02/12/2019
+ms.locfileid: "56111058"
