commit translated contents

--- a/articles/batch-ai/index.yml
+++ b/articles/batch-ai/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 8cd5101c7e979c63d274f1534a3fec8190e00317
-ms.sourcegitcommit: c37122644eab1cc739d735077cf971edb6d428fe
+ms.openlocfilehash: 0142b20f97bf4d51b922f0a41c7561299ada46be
+ms.sourcegitcommit: b3d74ce0a4acea922eadd96abfb7710ae79356e0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/14/2018
-ms.locfileid: "53409504"
+ms.lasthandoff: 02/14/2019
+ms.locfileid: "56242914"
 documentType: LandingData
 title: Dokumentation om Azure Batch AI (DRAS TILLBAKA)
 metadata:
@@ -18,6 +18,7 @@ metadata:
   ms.topic: landing-page
   ms.date: 12/14/2018
   ms.author: jmartens
+  ROBOTS: NOINDEX
 abstract:
   description: <div class="NOTE"><p>Obs!</p><p><strong>Azure Batch AI håller på att dras tillbaka.</strong> Stöd för den här tjänsten dras tillbaka inkrementellt. Funktionerna i Azure Batch AI är nu tillgängliga som ett hanterat beräkningsmål i Azure Machine Learning-tjänsten. Mer information finns i <a href="overview-what-happened-batch-ai" data-linktype="relative-path">Vad händer med Batch AI?</a></p></div>
 sections:
