--- a/articles/cdn/index.yml
+++ b/articles/cdn/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 07a24db7d611f7d29b7fcf9feb22d6fab208c89e
-ms.sourcegitcommit: e2348a7a40dc352677ae0d7e4096540b47704374
+ms.openlocfilehash: acb451634c1105e50798b4a80271e945a4e055ee
+ms.sourcegitcommit: de81b3fe220562a25c1aa74ff3aa9bdc214ddd65
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43781952"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "56238240"
 documentType: LandingData
 title: Dokumentation om Azure CDN
 metadata:
@@ -79,8 +79,8 @@ sections:
     className: cardsD
     items:
     - title: Kommandorad
-      html: <p><a href="/powershell/module/azurerm.cdn">PowerShell</a></p>
+      html: <p><a href="/powershell/module/az.cdn">PowerShell</a></p>
     - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.azure.management.cdn">.NET</a></p><p><a href="/java/api/com.microsoft.azure.management.cdn">Java</a></p>
+      html: <p><a href="/dotnet/api/microsoft.azure.management.cdn">NET</a></p><p><a href="/java/api/com.microsoft.azure.management.cdn">Java</a></p>
     - title: REST
       html: <p><a href="/rest/api/cdn/">REST API-referens</a></p>
