--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -38,6 +38,8 @@ items:
     href: resource-manager-tutorial-secure-artifacts.md
   - name: Använda säkra distributionsmetoder
     href: deployment-manager-tutorial.md
+  - name: Felsöka malldistribution
+    href: resource-manager-tutorial-troubleshoot.md
 - name: Exempel
   items:
   - name: Mallar för Resurshanteraren
@@ -140,9 +142,6 @@ items:
       href: cli-azure-resource-manager.md
     - name: Flytta resurser
       href: resource-group-move-resources.md
-      items:
-      - name: Flytta support per resurstyp
-        href: move-support-resources.md
     - name: Organisera resurser med hjälp av taggar
       href: resource-group-using-tags.md
     - name: Lås resurser
@@ -216,8 +215,12 @@ items:
       href: resource-group-template-functions-resource.md
     - name: Strängfunktioner
       href: resource-group-template-functions-string.md
-  - name: Stöd för taggar
-    href: tag-support.md
+  - name: Resursfunktioner
+    items:
+    - name: Stöd för att flytta
+      href: move-support-resources.md
+    - name: Stöd för taggar
+      href: tag-support.md
   - name: REST – Resource Manager
     href: /rest/api/resources/
   - name: REST – Distributionshanteraren
@@ -246,9 +249,9 @@ items:
     href: resource-manager-personal-data.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=azure-resource-manager
-ms.openlocfilehash: 9a33d74e88f169438bee554707bbfc8264faf256
-ms.sourcegitcommit: 30d23a9d270e10bb87b6bfc13e789b9de300dc6b
+ms.openlocfilehash: 3f42a8db14c953aa97f9cd7990ac7602d1d6b719
+ms.sourcegitcommit: de81b3fe220562a25c1aa74ff3aa9bdc214ddd65
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54106434"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "56235809"
