--- a/articles/azure-maps/index.yml
+++ b/articles/azure-maps/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f45fad91c94b35de512c0c995ef4e3a6311a25ad
-ms.sourcegitcommit: 415742227ba5c3b089f7909aa16e0d8d5418f7fd
+ms.openlocfilehash: 684e6a798c690c65f70c2f6224ac8f11256ce6eb
+ms.sourcegitcommit: f715dcc29873aeae40110a1803294a122dfb4c6a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/06/2019
-ms.locfileid: "55767426"
+ms.lasthandoff: 02/14/2019
+ms.locfileid: "56270138"
 documentType: LandingData
 title: Dokumentation för Azure Maps
 metadata:
@@ -16,7 +16,7 @@ metadata:
   ms.service: azure-maps
   services: azure-maps
   ms.topic: landing-page
-  ms.date: 02/04/2019
+  ms.date: 02/14/2019
   ms.author: philmea
 abstract:
   description: Azure Maps ger utvecklare från alla branscher kraftfulla geospatiala funktioner fullmatade med de senaste mappningsdata som är tillgängliga för att tillhandahålla geografisk kontext till webb- och mobilprogram. Azure Maps är en Azure One API-kompatibel uppsättning med API:er för Maps, Search, routning, trafik, tidszoner, geoplatser, geoavgränsning, kartdata och rumsliga åtgärder med SDK:er för både webben och Android som gör utvecklingen enkel, flexibel och portabel på olika plattformar.
@@ -35,13 +35,15 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Skapa ett geospatialt webbprogram för att söka efter orienteringspunkter och dirigera till platser med hjälp av Azure Maps.
+    text: Skapa ett geospatialt webbprogram för att söka efter orienteringspunkter, dirigera till platser och spåra enheter genom att skapa ett geofence med hjälp av Azure Maps.
   - type: list
     style: ordered
     items:
     - html: <a href="/azure/azure-maps/tutorial-search-location">Sök efter orienteringspunkter</a>
     - html: <a href="/azure/azure-maps/tutorial-route-location">Dirigera till en orienteringspunkt</a>
     - html: <a href="/azure/azure-maps/tutorial-prioritized-routes">Vägar efter färdsätt</a>
+    - html: <a href="/azure/azure-maps/tutorial-create-store-locator">Skapa en butikslokaliserare</a>
+    - html: <a href="/azure/azure-maps/tutorial-geofence">Konfigurera geofence</a>
 - title: Referens
   items:
   - type: list
@@ -51,4 +53,4 @@ sections:
     - title: JavaScript
       html: <p><a href="https://docs.microsoft.com/javascript/api/azure-maps-javascript/">Kartkontroll</a></p>
     - title: REST
-      html: <p><a href="https://docs.microsoft.com/rest/api/maps/render">Renderingstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/route">Routningstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/search">Söktjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/timezone">Tidszonstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/traffic">Trafiktjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps-management/">Kartkontohantering</a></p>
+      html: <p><a href="https://docs.microsoft.com/rest/api/maps/data">Datatjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/geolocation">Geoplatstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/render">Renderingstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/route">Routningstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/search">Söktjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/spatial">Rumslig tjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/timezone">Tidszonstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/traffic">Trafiktjänst</a></p>
