--- a/articles/cognitive-services/Bing-Autosuggest/toc.yml
+++ b/articles/cognitive-services/Bing-Autosuggest/toc.yml
@@ -33,6 +33,10 @@ items:
   items:
   - name: Uppgradera från v5 till v7
     href: bing-autosuggest-upgrade-guide-v5-to-v7.md
+- name: Begrepp
+  items:
+  - name: Föreslå frågeord
+    href: concepts/get-suggestions.md
 - name: Referens
   items:
   - name: API för automatiska förslag i Bing v7
@@ -76,9 +80,9 @@ items:
     href: language-support.md
   - name: Analys för API för automatiska förslag i Bing
     href: bing-autosuggest-stats.md
-ms.openlocfilehash: 072a551846ccefa05ba5b938fd75cd15bb003c8d
-ms.sourcegitcommit: fea5a47f2fee25f35612ddd583e955c3e8430a95
+ms.openlocfilehash: 19443b5bf95bd2e9aa982c53612297a63f4110b8
+ms.sourcegitcommit: f715dcc29873aeae40110a1803294a122dfb4c6a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/31/2019
-ms.locfileid: "55509722"
+ms.lasthandoff: 02/14/2019
+ms.locfileid: "56269795"
