--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -118,11 +118,11 @@ items:
       href: search-create-index-portal.md
     - name: Analysverktyg
       items:
-      - name: Lägga till textanalysverktyg
+      - name: Lägga till analysverktyg
         href: search-analyzers.md
-      - name: Lägga till språkanalysverktyg
+      - name: Lägga till ett språkanalysverktyg
         href: index-add-language-analyzers.md
-      - name: Lägga till anpassade analysverktyg
+      - name: Lägga till ett anpassat analysverktyg
         href: index-add-custom-analyzers.md
     - name: Lägga till automatiska förslag
       href: index-add-suggesters.md
@@ -196,17 +196,17 @@ items:
       href: search-query-overview.md
     - name: Sökutforskaren (portal)
       href: search-explorer.md
-    - name: Exempel för enkel syntax
+    - name: Enkel frågesyntax
+      href: query-simple-syntax.md
+    - name: Fullständigt Lucene-frågesyntax
+      href: query-lucene-syntax.md
+    - name: Frågeexempel (enkel syntax)
       href: search-query-simple-examples.md
-    - name: Exempel på Lucene-syntax
+    - name: Frågeexempel (fullständig Lucene)
       href: search-query-lucene-examples.md
-    - name: Frågesyntax
-      items:
-      - name: Enkel frågesyntax
-        href: query-simple-syntax.md
-      - name: Lucene-frågesyntaxen
-        href: query-lucene-syntax.md
-    - name: Växla resultat
+  - name: Hanteringsresultat
+    items:
+    - name: Sidrelaterade funktioner
       href: search-pagination-page-layout.md
   - name: Filtrera och sortera data
     items:
@@ -307,9 +307,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/search/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: eeac3c7bf976bf1a3ccc44c30127420e00c7a776
-ms.sourcegitcommit: 39397603c8534d3d0623ae4efbeca153df8ed791
+ms.openlocfilehash: a38dd0b739b5f34826798370b4ffa4ad84cc525d
+ms.sourcegitcommit: f863ed1ba25ef3ec32bd188c28153044124cacbc
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/12/2019
-ms.locfileid: "56099062"
+ms.lasthandoff: 02/15/2019
+ms.locfileid: "56299487"
