--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -97,20 +97,13 @@ items:
   - name: Underhåll och uppdateringar
     href: maintenance-and-updates.md
   - name: Disklagring
-    href: about-disks-and-vhds.md
     items:
-    - name: Managed Disks
+    - name: Introduktion till hanterade diskar
       href: managed-disks-overview.md
-    - name: Premium SSD:er
-      href: premium-storage.md
-    - name: Standard SSD:er
-      href: disks-standard-ssd.md
-    - name: Ultra SSD
-      href: disks-ultra-ssd.md
-    - name: Premium-lagringsprestanda
+    - name: Välja en disktyp för virtuella IaaS-datorer
+      href: disks-types.md
+    - name: Designa för höga prestanda
       href: premium-storage-performance.md
-    - name: Standard Storage
-      href: standard-storage.md
     - name: Skalbarhetsmål för diskar
       href: disk-scalability-targets.md
     - name: Lagring och haveriberedskap för diskar
@@ -334,6 +327,8 @@ items:
         href: attach-disk-ps.md
       - name: Azure Portal
         href: attach-managed-disk-portal.md
+    - name: Beräkna benchmark för en disk
+      href: disks-benchmarks.md
     - name: Koppla från en disk
       href: detach-disk.md
     - name: Ändra storlek på en disk
@@ -354,7 +349,7 @@ items:
       href: using-managed-disks-template-deployments.md
     - name: Aktivera Write Accelerator
       href: how-to-enable-write-accelerator.md
-    - name: Med hjälp av Ultra SSD
+    - name: Aktivera ultradiskar
       href: disks-enable-ultra-ssd.md
     - name: Migrera till Managed Disks
       href: migrate-to-managed-disks.md
@@ -466,9 +461,9 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: 770b828330bc0ad10b0aa78277f0872368cf201c
-ms.sourcegitcommit: a7331d0cc53805a7d3170c4368862cad0d4f3144
+ms.openlocfilehash: a94dc323129041ffaaadc65204fdc35327b88b33
+ms.sourcegitcommit: d2329d88f5ecabbe3e6da8a820faba9b26cb8a02
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55299894"
+ms.lasthandoff: 02/16/2019
+ms.locfileid: "56328834"
